--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ h1, h2, h3, h4, h5, h6, figure {
     background-size: cover;
     background-attachment: fixed;
     position: relative;
-    height: 700px; /* Increased height for more space */
+    height: 800px; /* Increased height for more space */
     width: 100%;
 }
 
@@ -108,7 +108,7 @@ h1, h2, h3, h4, h5, h6, figure {
 .fh5co-cover .display-tc {
     display: table-cell;
     vertical-align: middle;
-    height: 700px; /* Increased height to match header */
+    height: 800px; /* Match the header height */
 }
 
 #fh5co-header .display-tc h1,
@@ -209,13 +209,13 @@ h1, h2, h3, h4, h5, h6, figure {
     background-position: center center;
     background-repeat: no-repeat;
     position: relative;
-    height: 250px; /* Increased size */
-    width: 250px; /* Increased size */
+    height: 300px; /* Increased height */
+    width: 300px; /* Increased width */
     margin: 0 auto;
     margin-bottom: 30px;
-    border-radius: 50%;
-    border: 6px solid #fff; /* Thicker border */
-    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3); /* Enhanced shadow */
+    border-radius: 50%; /* Circular image */
+    border: 8px solid #fff; /* Thicker border */
+    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3); /* Enhanced shadow */
 }
 
 #fh5co-header .display-tc .fh5co-social-icons li a,
@@ -657,4 +657,729 @@ h1, h2, h3, h4, h5, h6, figure {
     ul.timeline>li>.timeline-panel:after {
         border-left-width: 0;
         border-right-width: 14px;
-       
+        left: -14px;
+        right: auto;
+    }
+}
+
+.progress-wrap {
+    width: 100%;
+    float: left;
+    margin-bottom: 10px;
+}
+
+.progress-wrap h3 {
+    font-size: 16px;
+    display: block;
+    margin-bottom: 10px;
+    float: left;
+    width: 100%;
+}
+
+.progress-wrap h3 .name-left {
+    float: left;
+}
+
+.progress-wrap h3 .value-right {
+    float: right;
+}
+
+.progress {
+    width: 100%;
+    float: left;
+    height: 5px;
+    box-shadow: none;
+}
+
+.progress-bar {
+    background-color: #2F3C4F;
+    height: 5px;
+    display: block;
+    box-shadow: none;
+}
+
+.progress-bar.progress-bar-1 {
+    background-color: #2980b9 !important;
+}
+
+.progress-bar.progress-bar-2 {
+    background-color: #c0392b !important;
+}
+
+.progress-bar.progress-bar-3 {
+    background-color: #d35400 !important;
+}
+
+.progress-bar.progress-bar-4 {
+    background-color: #8e44ad !important;
+}
+
+.progress-bar.progress-bar-5 {
+    background-color: #27ae60 !important;
+}
+
+.chart {
+    width: 160px;
+    height: 160px;
+    margin: 0 auto 40px auto;
+    position: relative;
+    text-align: center;
+}
+
+.chart span {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    margin-top: -30px;
+    width: 100%;
+}
+
+.chart span strong {
+    display: block;
+}
+
+.chart canvas {
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.work {
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    position: relative;
+    height: 270px;
+    width: 100%;
+    display: table;
+    overflow: hidden;
+}
+
+@media screen and (max-width: 768px) {
+    .work {
+        height: 400px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .work {
+        height: 270px;
+    }
+}
+
+.work .desc {
+    display: table-cell;
+    vertical-align: middle;
+    height: 270px;
+    background: #fff;
+    opacity: 0;
+    transition: 0.3s;
+}
+
+.work .desc h3 {
+    font-size: 20px;
+    transition: transform 0.3s, opacity 0.3s;
+    transform: translate3d(0, -15px, 0);
+}
+
+.work .desc span {
+    display: block;
+    color: #999999;
+    font-size: 14px;
+    transition: transform 0.3s, opacity 0.3s;
+    transform: translate3d(0, 15px, 0);
+}
+
+@media screen and (max-width: 768px) {
+    .work .desc {
+        opacity: 1;
+        background: rgba(255, 255, 255, 0.6);
+    }
+    .work .desc h3 {
+        transform: translate3d(0, 0, 0);
+    }
+    .work .desc span {
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+.work:hover .desc {
+    opacity: 1;
+}
+
+.work:hover .desc h3 {
+    transform: translate3d(0, 0, 0);
+}
+
+.work:hover .desc span {
+    transform: translate3d(0, 0, 0);
+}
+
+#fh5co-started {
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    position: relative;
+    float: left;
+    width: 100%;
+}
+
+#fh5co-started .fh5co-heading {
+    margin-bottom: 0;
+}
+
+#fh5co-started .fh5co-heading h2 {
+    color: #fff;
+    margin-bottom: 20px !important;
+}
+
+#fh5co-started .fh5co-heading p {
+    color: rgba(255, 255, 255, 0.8);
+}
+
+#fh5co-started .btn {
+    height: 54px;
+    border: none !important;
+    background: #fff;
+    color: #FF9000;
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: 400;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.fh5co-blog {
+    width: 100%;
+    float: left;
+    margin-bottom: 40px;
+}
+
+@media screen and (max-width: 768px) {
+    .fh5co-blog {
+        width: 100%;
+    }
+}
+
+.fh5co-blog .blog-bg {
+    display: block;
+    width: 100%;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    position: relative;
+    height: 300px;
+}
+
+@media screen and (max-width: 768px) {
+    .fh5co-blog .blog-bg {
+        height: 400px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .fh5co-blog .blog-bg {
+        height: 270px;
+    }
+}
+
+.fh5co-blog .blog-text {
+    margin-bottom: 30px;
+    position: relative;
+    width: 100%;
+    padding: 30px;
+    float: left;
+    background: #fff;
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
+    transition: 0.3s;
+}
+
+@media screen and (max-width: 768px) {
+    .fh5co-blog .blog-text {
+        padding: 10px;
+    }
+}
+
+.fh5co-blog .blog-text span {
+    display: inline-block;
+    margin-bottom: 20px;
+    font-size: 18px !important;
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.fh5co-blog .blog-text .stuff {
+    margin: 0;
+    padding: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.05);
+    padding-top: 20px;
+}
+
+.fh5co-blog .blog-text .stuff li {
+    list-style: none;
+    display: inline-block;
+    margin-left: 10px;
+}
+
+@media screen and (max-width: 768px) {
+    .fh5co-blog .blog-text .stuff li {
+        font-size: 14px;
+    }
+}
+
+.fh5co-blog .blog-text .stuff li:first-child {
+    margin-left: 0;
+}
+
+.fh5co-blog .blog-text .stuff li:last-child {
+    float: right;
+}
+
+.fh5co-blog .blog-text .stuff li:last-child a {
+    color: #000;
+}
+
+.fh5co-blog .blog-text .stuff li:last-child i {
+    padding-right: 0;
+    padding-left: 10px;
+}
+
+.fh5co-blog .blog-text .stuff li i {
+    font-size: 14px;
+    padding-right: 5px;
+}
+
+.fh5co-blog .blog-text h3 {
+    font-size: 24px;
+    margin-bottom: 20px;
+    line-height: 1.5;
+}
+
+.fh5co-blog .blog-text h3 a {
+    color: black;
+}
+
+#fh5co-consult {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    float: left;
+}
+
+#fh5co-consult .video,
+#fh5co-consult .choose {
+    display: inline-block;
+}
+
+@media screen and (max-width: 768px) {
+    #fh5co-consult .video,
+    #fh5co-consult .choose {
+        width: 100% !important;
+    }
+}
+
+#fh5co-consult .video {
+    display: table;
+    width: 50%;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+@media screen and (max-width: 768px) {
+    #fh5co-consult .video {
+        display: none;
+    }
+}
+
+#fh5co-consult .choose {
+    width: 50%;
+    padding: 4em;
+}
+
+@media screen and (max-width: 768px) {
+    #fh5co-consult .choose {
+        width: 100%;
+        padding: 4em 1em;
+    }
+}
+
+.fh5co-video {
+    overflow: hidden;
+}
+
+@media screen and (max-width: 992px) {
+    .fh5co-video {
+        height: 450px;
+    }
+}
+
+.fh5co-video .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.1);
+    transition: 0.5s;
+}
+
+#fh5co-footer {
+    padding: 20px 0;
+    float: left;
+    width: 100%;
+}
+
+#fh5co-footer p:last-child {
+    margin-bottom: 0;
+}
+
+.contact-info {
+    margin-bottom: 4em;
+    padding: 0;
+}
+
+.contact-info li {
+    list-style: none;
+    margin: 0 0 20px 0;
+    position: relative;
+    padding-left: 40px;
+    color: #000;
+}
+
+.contact-info li i {
+    position: absolute;
+    top: .3em;
+    left: 0;
+    font-size: 22px;
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.contact-info li a {
+    color: #000;
+}
+
+.form-control {
+    box-shadow: none;
+    border: 2px solid rgba(0, 0, 0, 0.1);
+    font-size: 18px;
+    font-weight: 300;
+    border-radius: 4px;
+}
+
+.form-control:focus,
+.form-control:active {
+    box-shadow: none;
+    border: 2px solid rgba(0, 0, 0, 0.8);
+}
+
+input[type="text"] {
+    height: 50px;
+}
+
+.form-group {
+    margin-bottom: 30px;
+}
+
+#map {
+    width: 100%;
+    height: 500px;
+    position: relative;
+}
+
+@media screen and (max-width: 768px) {
+    #map {
+        height: 200px;
+    }
+}
+
+.gototop {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 999;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.5s;
+}
+
+.gototop.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.gototop a {
+    width: 50px;
+    height: 50px;
+    display: table;
+    background: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    text-align: center;
+    border-radius: 50%;
+}
+
+.gototop a i {
+    height: 50px;
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.gototop a:hover,
+.gototop a:active,
+.gototop a:focus {
+    text-decoration: none;
+    outline: none;
+}
+
+.btn {
+    margin-right: 4px;
+    margin-bottom: 4px;
+    font-family: "Space Mono", Arial, serif;
+    font-size: 16px;
+    font-weight: 400;
+    border-radius: 30px;
+    transition: 0.5s;
+    padding: 8px 20px;
+}
+
+.btn.btn-md {
+    padding: 8px 20px !important;
+}
+
+.btn.btn-lg {
+    padding: 18px 36px !important;
+}
+
+.btn:hover,
+.btn:active,
+.btn:focus {
+    box-shadow: none !important;
+    outline: none !important;
+}
+
+.btn-primary {
+    background: #FF9000;
+    color: #fff;
+    border: 2px solid #FF9000;
+}
+
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active {
+    background: #ff9b1a !important;
+    border-color: #ff9b1a !important;
+}
+
+.btn-primary.btn-outline {
+    background: transparent;
+    color: #FF9000;
+    border: 2px solid #FF9000;
+}
+
+.btn-primary.btn-outline:hover,
+.btn-primary.btn-outline:focus,
+.btn-primary.btn-outline:active {
+    background: #FF9000;
+    color: #fff;
+}
+
+.btn-success {
+    background: #5cb85c;
+    color: #fff;
+    border: 2px solid #5cb85c;
+}
+
+.btn-success:hover,
+.btn-success:focus,
+.btn-success:active {
+    background: #4cae4c !important;
+    border-color: #4cae4c !important;
+}
+
+.btn-success.btn-outline {
+    background: transparent;
+    color: #5cb85c;
+    border: 2px solid #5cb85c;
+}
+
+.btn-success.btn-outline:hover,
+.btn-success.btn-outline:focus,
+.btn-success.btn-outline:active {
+    background: #5cb85c;
+    color: #fff;
+}
+
+.btn-info {
+    background: #5bc0de;
+    color: #fff;
+    border: 2px solid #5bc0de;
+}
+
+.btn-info:hover,
+.btn-info:focus,
+.btn-info:active {
+    background: #46b8da !important;
+    border-color: #46b8da !important;
+}
+
+.btn-info.btn-outline {
+    background: transparent;
+    color: #5bc0de;
+    border: 2px solid #5bc0de;
+}
+
+.btn-info.btn-outline:hover,
+.btn-info.btn-outline:focus,
+.btn-info.btn-outline:active {
+    background: #5bc0de;
+    color: #fff;
+}
+
+.btn-warning {
+    background: #f0ad4e;
+    color: #fff;
+    border: 2px solid #f0ad4e;
+}
+
+.btn-warning:hover,
+.btn-warning:focus,
+.btn-warning:active {
+    background: #eea236 !important;
+    border-color: #eea236 !important;
+}
+
+.btn-warning.btn-outline {
+    background: transparent;
+    color: #f0ad4e;
+    border: 2px solid #f0ad4e;
+}
+
+.btn-warning.btn-outline:hover,
+.btn-warning.btn-outline:focus,
+.btn-warning.btn-outline:active {
+    background: #f0ad4e;
+    color: #fff;
+}
+
+.btn-danger {
+    background: #d9534f;
+    color: #fff;
+    border: 2px solid #d9534f;
+}
+
+.btn-danger:hover,
+.btn-danger:focus,
+.btn-danger:active {
+    background: #d43f3a !important;
+    border-color: #d43f3a !important;
+}
+
+.btn-danger.btn-outline {
+    background: transparent;
+    color: #d9534f;
+    border: 2px solid #d9534f;
+}
+
+.btn-danger.btn-outline:hover,
+.btn-danger.btn-outline:focus,
+.btn-danger.btn-outline:active {
+    background: #d9534f;
+    color: #fff;
+}
+
+.btn-outline {
+    background: none;
+    border: 2px solid gray;
+    font-size: 16px;
+    transition: 0.3s;
+}
+
+.btn-outline:hover,
+.btn-outline:focus,
+.btn-outline:active {
+    box-shadow: none;
+}
+
+.btn.with-arrow {
+    position: relative;
+    transition: 0.3s;
+}
+
+.btn.with-arrow i {
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    right: 0px;
+    top: 50%;
+    margin-top: -8px;
+    transition: 0.2s;
+}
+
+.btn.with-arrow:hover {
+    padding-right: 50px;
+}
+
+.btn.with-arrow:hover i {
+    color: #fff;
+    right: 18px;
+    visibility: visible;
+    opacity: 1;
+}
+
+.form-control {
+    box-shadow: none;
+    background: transparent;
+    border: 2px solid rgba(0, 0, 0, 0.1);
+    height: 54px;
+    font-size: 18px;
+    font-weight: 300;
+}
+
+.form-control:active,
+.form-control:focus {
+    outline: none;
+    box-shadow: none;
+    border-color: #FF9000;
+}
+
+.row-pb-md {
+    padding-bottom: 4em !important;
+}
+
+.row-pb-sm {
+    padding-bottom: 2em !important;
+}
+
+.nopadding {
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
+.col-padding {
+    padding: 6px !important;
+    margin: 0px !important;
+}
+
+.fh5co-loader {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: url(../images/loader.gif) center no-repeat #fff;
+}
+
+.js .animate-box {
+    opacity: 0;
+}
+
+/*# sourceMappingURL=style.css.map */
+
+.changeboldprop {
+    font-weight: normal;
+    color: white;
+    text-align: center;
+}
